updated hash route

--- a/navbar/src/app/primary-nav/primary-nav.component.html
+++ b/navbar/src/app/primary-nav/primary-nav.component.html
@@ -1,16 +1,16 @@
 <nav>
   <li>
-    <a href="/#/">
+    <a [routerLink]="['/home']">
       Home
     </a>
   </li>
   <li>
-    <a href="/#/app1">
+    <a [routerLink]="['/app1']">
       App 1
     </a>
   </li>
   <li>
-    <a href="/#/app2">
+    <a [routerLink]="['/app2']">
       App 2
     </a>
   </li>
